Supercluster/Cluster01/Jellyfin/Namespace.yaml
############################
# @author EliasDH Team     #
# @see https://eliasdh.com #
# @since 01/01/2025        #
############################
---
apiVersion: v1
kind: Namespace
metadata:
  name: jellyfin
  labels:
    name: jellyfin
    app: jellyfin
    owner: EliasDH
    environment: production
  annotations:
    description: This namespace is used for the jellyfin application.
    contact: info@eliasdh.com
---
