Supercluster/Cluster01/Jellyfin/Deployment.yaml
############################
# @author EliasDH Team     #
# @see https://eliasdh.com #
# @since 01/01/2025        #
############################
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin-deployment
  namespace: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      nodeSelector:
        kubernetes.io/hostname: node05
      containers:
      - name: jellyfin
        image: jellyfin/jellyfin:latest
        ports:
        - containerPort: 8096
        volumeMounts:
        - name: jellyfin-storage
          mountPath: /config
        - name: jellyfin-storage
          mountPath: /media
      volumes:
      - name: jellyfin-storage
        persistentVolumeClaim:
          claimName: jellyfin-pvc
---
